# auth0-assistant0

./: .env.example  .gitignore  README.md  README.mdt  package-lock.json  package.json
.github/workflows/: check-pr.yaml
py-langchain/: README.md
py-langchain/backend/: .env.example  README.md  pyproject.toml
py-langchain/frontend/: package-lock.json  package.json
py-llamaindex/: README.md
py-llamaindex/backend/: .env.example  README.md  pyproject.toml
py-llamaindex/backend/app/: main.py
py-llamaindex/backend/app/agents/: assistant0_li.py
py-llamaindex/backend/app/agents/tools/: context_docs_li.py  google_calendar_li.py  shop_online_li.py  user_info_li.py
py-llamaindex/backend/app/api/: api_router.py
py-llamaindex/backend/app/api/routes/: agent_li.py  documents.py
py-llamaindex/backend/app/core/: config.py  db.py  fga.py  fga_init.py  rag_li.py
py-llamaindex/backend/app/models/: documents.py  embeddings.py  models.py
py-llamaindex/frontend/: .gitignore
scripts/: update_packages.sh
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/components/: ChatMessageBubble.tsx  ChatWindow.tsx  InfoCard.tsx  Navbar.tsx
src/components/auth0/: user-button.tsx
src/components/guide/: GuideInfoBox.tsx
src/components/ui/: button.tsx  (+7 more)
src/lib/: agent.ts  auth0-ai.ts  auth0.ts
src/utils/: message-converters.ts  stream-logging.ts
ts-langchain/: .env.example  package-lock.json  package.json
ts-llamaindex/: .env.example  .gitignore  README.md  package-lock.json  package.json
ts-vercel-ai/: .env.example  README.md  package-lock.json  package.json
(+47 files in other folders)
