[project]
name = "backend"
version = "0.1.0"
description = "Assistant0 (FastAPI + LlamaIndex)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.28.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "sqlmodel>=0.0.18",
  "pgvector>=0.2.5",
  "psycopg>=3.2.9",
  "psycopg-binary>=3.2.9",
  "PyPDF2>=3.0.1",
  "itsdangerous>=2.2.0",

  # Auth0
  "auth0-fastapi>=1.0.0b4",

  # LlamaIndex
  "llama-index>=0.12.11,<0.13.0",
  "llama-index-vector-stores-postgres>=0.2.0",
  "auth0-ai-llamaindex==0.1.1",

  # Google
  "google-api-python-client>=2.142.0",
  "google-auth>=2.35.0",
  "google-auth-oauthlib>=1.2.1",

  # Dev (opcjonalnie)
  "python-dotenv>=1.0.1",
  "black>=24.8.0",
  "isort>=5.13.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"